[Changes for 1.22 - 2012-12-04]

* Tests all green on CPAN Testers. releasing to public.

[Changes for 1.22_01 - 2012-11-27]

* Fix error message typo: s/existant/existent/g
* Fix for non-printable character detection
* Quote if non-printable characters are present
* Change LoadBlessed=0 to not bless under ANY circumstances

[Changes for 1.21 - 2012-09-20]

* Tests all green on CPAN Testers. releasing to public.

[Changes for 1.21_01 - 2012-06-22]

* Synchronize JSON::Syck with YAML::Syck version number
* Add DumpInto functions (YAML+Syck) which dump into
  a provided scalar instead of a newly allocated one
* Modify DumpFile functions to output directly to the
  specified file/filehandle instead of buffering all
  output in memory.
* Avoid modifying numbers into strings when emitting

[Changes for 1.20 (JSON::Syck 0.43) - 2012-02-14]

* Tests all green on CPAN Testers. releasing to public.

[Changes for 1.20_01 (JSON::Syck 0.43_01) - 2012-02-11]

* Add test to assure META.yml is up to date before release
* Fix for RT 70933 - disable check for empty file handle in LoadFile calls
* Remove call to non-existent code YAML::Syck::_is_openhandle.
* Fix for RT 74785 - compiling with -Werror=format-security fails

[Changes for 1.19 (JSON::Syck 0.42 ) - 2011-11-08]

* Do not run t/leak.t on perls prior to 5.8.9 as 5.8.8
  and Devel::Leak apparently do not mix (perl RT #102606).

[Changes for 1.18 (JSON::Syck 0.41 ) - 2011-11-05]

* Promote to stable release.

[Changes for 1.17_02 (JSON::Syck 0.40_02 ) - 2011-11-03]

* perl RT #102606 - Only lvalue subroutines are supposed to return
  the argument to "return" without copying it. Stop relying on a
  pre-5.15 bug. [Father Chrysostomos]

[Changes for 1.17_01 (JSON::Syck 0.40_01 ) - 2011-02-28]

* Break YAML::Syck dependency on Scalar::Util

[Changes for 1.17 (JSON::Syck 0.40 ) - 2010-11-21]

* Change a C99 comment to a C89 comment

* Upgrade ppport.h from 3.13 to 3.19

* Remove inc/Test/Builder/IO/Scalar.pm from MANIFEST
