@@ -1,3 +1,7 @@
+[** NEXT **]
+
+* Make sure that LoadBlessed do not bless references when set to 0.
+
 [Changes for 1.22 - 2012-12-04]
 
 * Tests all green on CPAN Testers. releasing to public.
